[project]
name = "waltz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmet Faruk Lacin", email = "ahmetfaruklacin48@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = []

[project.scripts]
waltz = "waltz:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
