[project]
name = "waltz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmet Faruk Lacin", email = "ahmetfaruklacin48@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "aiohttp>=3.14.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
]

[project.scripts]
waltz = "waltz.cli.cli:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-async>=0.1.1",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
# Black's default is 88; we use 100 to fit waltz's explanatory comments
# without forcing awkward wraps. target-version is inferred from requires-python.
line-length = 100

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes (catches real bugs like unused vars), I import
# sorting, B bugbear, UP modern-syntax upgrades, C4 comprehensions,
# SIM simplifications, RUF ruff-specific rules.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
